--- a/devops.html
+++ b/devops.html
@@ -38,11 +38,15 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/ellevationeducation/f7a66491-5122-48da-9c14-98138432823a'>Ellevation - Senior Devops/Systems Engineer</a></h5> 
+<p><span class="badge badge-light">Boston, MA  Boston</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://tocco.join.com/jobs/475665-leitung-entwicklung-und-devops'>Job @ Tocco (Z?rich): Leitung Entwicklung und DevOps | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=ol59afwt&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nx5YqMwh'>Palo Alto Networks Careers - Senior Software Engineer (DevOps)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=ol59afwt&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nx5YqMwh'>Palo Alto Networks Careers - Senior Software Engineer (DevOps)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -58,7 +62,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://pebexag.join.com/jobs/443702-devops-engineer-middleware-m-w-100'>Job @ PebEx (Olten): DevOps Engineer Middleware (m... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pebexag.join.com/jobs/443702-devops-engineer-middleware-m-w-100'>Job @ PebEx (Olten): DevOps Engineer Middleware (m... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -114,7 +118,7 @@
 <p><span class="badge badge-light">Tel Aviv, Israel</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/showpad/jobs/98344'>Job Application for DevOps Engineer at Showpad</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/showpad/jobs/98344'>Job Application for DevOps Engineer at Showpad</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -142,7 +146,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://demos.join.com/jobs/467712-devops-engineer-m-w-d'>Job @ DEMOS E-Partizipation (Berlin): DevOps Engin... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://demos.join.com/jobs/467712-devops-engineer-m-w-d'>Job @ DEMOS E-Partizipation (Berlin): DevOps Engin... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -200,7 +204,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://ovhus.applytojob.com/apply/U3phWEytzM/Cloud-Engineer-DevOps-OpenStack-Auotmation-Development'>Cloud Engineer - DevOps (OpenStack / Auotmation / Development) - OVHcloud - Career Page</a></h5> 
+<h5><a href='http://ovhus.applytojob.com/apply/U3phWEytzM/Cloud-Engineer-DevOps-OpenStack-Auotmation-Development'>Cloud Engineer - DevOps (OpenStack / Auotmation / Development) - OVHcloud - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -278,7 +282,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/labelbox/e86d9dfe-2e63-459c-93a2-f92412441d60'>Labelbox - DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/labelbox/e86d9dfe-2e63-459c-93a2-f92412441d60'>Labelbox - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -290,7 +294,7 @@
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/Rdp1bhIBIU/DevOps-Engineer'>DevOps Engineer - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/Rdp1bhIBIU/DevOps-Engineer'>DevOps Engineer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Bethesda, MD</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -302,7 +306,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oQBQafwb&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=noGipMw2'>Cirrus Logic Careers - DevOps Engineer - CI/CD Platform</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oQBQafwb&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=noGipMw2'>Cirrus Logic Careers - DevOps Engineer - CI/CD Platform</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -348,7 +352,7 @@
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lana-labs.join.com/jobs/457387-devops-engineer-f-m-d'>Job @ Lana Labs (Berlin): DevOps Engineer (f/m/d) | JOIN</a></h5> 
+<h5><a href='https://lana-labs.join.com/jobs/457387-devops-engineer-f-m-d'>Job @ Lana Labs (Berlin): DevOps Engineer (f/m/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -422,7 +426,7 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/interana/jobs/4493924002'>Job Application for DevOps Lead Engineer at Interana</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/interana/jobs/4493924002'>Job Application for DevOps Lead Engineer at Interana</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -457,10 +461,6 @@ agile service team focused on daily production service delivery and application?
       DevOps Engineer Medior - Impraise
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='http://flyhtaerospace.applytojob.com/apply/ow1nxWO88P/DevOps-Engineer'>DevOps Engineer - FLYHT Aerospace - Career Page</a></h5> 
-<p><span class="badge badge-light">Calgary, ABCanada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
